--- a/Homepage.html
+++ b/Homepage.html
@@ -4,31 +4,31 @@
         <link rel="stylesheet" type="text/css" href="css/basic.css">
         <link rel="stylesheet" type="text/css" href="css/homepage.css">
     </head>
-    <body>
+    <body style="background-color: grey">
         <div id="header">
-            <a href="Homepage.html"><img id="logoheader" src="img/BlaBlaBla.png"></a>
+            <i><h3><a href="Homepage.html">Gaming BLOG</a></h3></i>
             <h3><a href="Homepage.html">Home</a></h3>
             <h3><a href="news.html">Latest News</a></h3>
             <h3><a href="forum.html">Forum</a></h3>
-            <div id="login"><h3><a href="login.html">Login</a></h3></div>
-        </div>
+         <div id="login"><h3><a href="login.html">Login/Sign in</a></h3></div>
+     </div>
         <div id="layout1">
             <div id="picture1">
-                <a href="News.html"><img src="img/death%20stranding.jpg" width="100%" height="100%"></a>
+                <a href="News.html"><img src="img/ml.jpg" width="100%" height="100%"></a>
             </div>
             <div id="picture2">
-                <a href="example.html"><img src="img/nfsheat.jpg" width="100%" height="100%"></a>
+                <a href="news2.html"><img src="img/pubg.jpg" width="100%" height="100%"></a>
             </div>
         </div>
         <div id="titleA">
-            <div id="titleA1"><h2><a href="News.html">Death Stranding Review by Aufa Randy (Example)</a></h2></div>
-            <div id="titleA2"><h2><a href="example2.html">NFS Heat Review by Aufa Randy (Example)</a></h2></div>
+            <div id="titleA1"><h2><a href="News.html">MOBILE LEGEND (Example)</a></h2></div>
+            <div id="titleA2"><h2><a href="News2.html">PLAYERUNKNOW'S BATTLEGROUNDS (Example)</a></h2></div>
         </div>
         <div id="layout2">
             <div id="picture3">
-                <a href="example3.html"><img src="img/cs.jpg" width="100%" height="100%"></a></div>
+                <a href="news1.html"><img src="img/cs.jpg" width="100%" height="100%"></a></div>
             <div id="picture4">
-                <a href="example4"><img src="img/starwarsjedi.jpeg" width="100%" height="100%"></a></div>
+                <a href="example4"><img src="img/coc.jpg" width="100%" height="100%"></a></div>
             <div id="picture5">
                 <a href="example5"><img src="img/rdr2.jpg" width="100%" height="100%"></a></div>
         </div>
@@ -38,7 +38,7 @@
             <div id="titleB3"><h2><a href="example5.html">Red Dead Redemption 2 Review by Aufa (Example)</a></h2></div>
         </div>
         <div id="footer">
-            <a href="Homepage.html"><img id="logofooter" src="img/BlaBlaBla.png"></a>
+            <h1>Gaming BLOG &trade;</h1>
         </div>
     </body>
 </html>
