--- a/login.html
+++ b/login.html
@@ -2,30 +2,31 @@
 <html>
 <head>
 <title>Login</title>
-<link rel="stylesheet" type="text/css" href="css/login.css">
 <link rel="stylesheet" type="text/css" href="css/basic.css">
+<link rel="stylesheet" type="text/css" href="css/login.css">
 </head>
 <body>
 <!-- Header -->
 <div id="header">
-<a href="homepage.html"><img id="logoheader"
-src="img/BlaBlaBla.png"></a>
+<i><h3><a href="homepage.html">Gaming BLOG</a></h3></i>
 <!-- Login -->
  <h3><a href="Homepage.html">Home</a></h3>
  <h3><a href="news.html">Latest News</a></h3>
  <h3><a href="forum.html">Forum</a></h3>
  <div id="login">
- <h3><a href="login.html">Login</a></h3>
+ <h3><a href="login.html">Login/Sign in</a></h3>
  </div>
 </div>
 
  <div class="login">
- <h2>Sign In</h2>
+ <h2>Sign In Your account</h2>
  <form>
+ 	<p>Email addres</p>
  <div class="input-group">
  <input type="text" name="required">
- <span>User Name</span>
+ <span>Email addres</span>
  </div>
+ <p>Enter your password</p>
  <div class="input-group">
  <input type="text" name="required">
  <span>Password</span>
@@ -35,9 +36,11 @@ src="img/BlaBlaBla.png"></a>
  </div>
  </form>
  <a href="#">Forget Password<span>Click Here</span></a>
+ 
  </div>
  <!-- Footer -->
-<div id="footer"><img id="logofooter"
-src="img/BlaBlaBla.png"></div>
+<div id="footer">
+	<h1>Gaming BLOG &trade;</h1>
+</div>
 </body>
 </html>
