--- a/Homepage.html
+++ b/Homepage.html
@@ -10,7 +10,7 @@
             <h3><a href="Homepage.html">Home</a></h3>
             <h3><a href="news.html">Latest News</a></h3>
             <h3><a href="forum.html">Forum</a></h3>
-         <div id="login"><h3><a href="login.html">Login/Sign in</a></h3></div>
+            <h1><a href="login.html">Login</a></h3></div>
      </div>
         <div id="layout1">
             <div id="picture1">
