--- a/forum.html
+++ b/forum.html
@@ -6,15 +6,13 @@
 <title>Forum</title>
 </head>
 <body style="background-color: grey">
-    </div>
+    
     <div id="header">
         <i><h3><a href="homepage.html">Gaming BLOG</a></h3></i>
         <h3><a href="homepage.html">Home</a></h3>
         <h3><a href="news.html">Latest News</a></h3>
         <h3><a href="forum.html">Forum</a></h3>
-        <div id="login">
-            <h3><a href="login.html">Login/Sign in</a></h3>
-        </div>
+        <h1><a href="login.html">Login</a></h3>
     </div>
         <div>
             <img id="rightads" src="img/01_vertical-banner.jpg">
