--- a/login.html
+++ b/login.html
@@ -13,10 +13,8 @@
  <h3><a href="Homepage.html">Home</a></h3>
  <h3><a href="news.html">Latest News</a></h3>
  <h3><a href="forum.html">Forum</a></h3>
- <div id="login">
- <h3><a href="login.html">Login/Sign in</a></h3>
+ <h1><a href="login.html">Login</a></h1>
  </div>
-</div>
 
  <div class="login">
  <h2>Sign In Your account</h2>
