--- a/news2.html
+++ b/news2.html
@@ -8,9 +8,7 @@
         <h3><a href="Homepage.html">Home</a></h3>
         <h3><a href="news.html">Latest News</a></h3>
         <h3><a href="forum.html">Forum</a></h3> 
-        <div id="login">
-            <h3><a href="login.html">Login/Sign in</a></h3>
-        </div>
+        <h1><a href="login.html">Login</a></h1>
         </div>  
         </head>
 
@@ -40,7 +38,7 @@
             <div id="content">
                 
             <br>
-            <p><img src="img/pubg.jpg" class="content1"></p><br>
+            <img src="img/pubg.jpg" class="content1"><br>
             
                 <b><h1>Many BOT for new player</h1></b><br>
                 <p>
