--- a/login.html
+++ b/login.html
@@ -19,10 +19,10 @@
  <div class="login">
  <h2>Sign In Your account</h2>
  <form>
- 	<p>Email addres</p>
+ 	<p>Email address</p>
  <div class="input-group">
  <input type="text" name="required">
- <span>Email addres</span>
+ <span>Email address</span>
  </div>
  <p>Enter your password</p>
  <div class="input-group">
