--- a/news.html
+++ b/news.html
@@ -32,7 +32,7 @@
             
             <div id="contentheader">
             <h1>Mobile Legend v 2 . 0 Review</h1>
-            <p>by Zaenur ismail Widyatmoko - 2 des, 2019</p>
+            <p>by Web Design Group 4 - 2 des, 2019</p>
             </div>
             
             <div id="content">
